# chromemind

./: .env.example  .gitignore  README.md  SYSTEM_DESIGN.md  SYSTEM_DESIGN_clean.md  chromemind-config.example.yaml  chromemind-config.yaml  pyproject.toml
.chromemind/: global_guardrails.yaml
agents/: enricher.py  git_agent.py  logger.py  notion_writer.py  orchestrator.py  scraper.py
artifacts/: implementation_plan.md  implementation_plan_core_phase1  implementation_plan_core_phase2  walkthrough.md
chromemind/: cli.py  errors.py  guardrails.py  schemas.py
extension/: background.js  manifest.json
skills/: build_enrichment_prompt.py  call_llm.py  format_log_entry.py  handle_notion_errors.py  map_to_notion_schema.py  mask_sensitive_data.py  normalise_raw_item.py  notion_upsert.py  parse_config.py  parse_enrichment_response.py  scrape_bookmarks.py  scrape_history.py  scrape_tabs.py  validate_enrichment.py  write_log.py
tests/: conftest.py  test_agents.py  test_skills.py
